[feat]: 비동기처리 추가

--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -67,3 +67,10 @@ h1 {
   justify-content: center;
   margin-top: 10px;
 }
+
+#error_money {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  color: red;
+}
