--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -74,3 +74,32 @@ h1 {
   margin-top: 10px;
   color: red;
 }
+
+/* -------------------------------- */
+
+.tabCalculator_div {
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 20px;
+  width: 250px;
+  height: 350px;
+  border: 5px solid black;
+}
+
+.tabCalculator_div_input {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tabCalCulator_div_btn {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tabCalCulator_div_currency {
+  margin-top: 15px;
+  width: 100%;
+  height: 280px;
+  border: 1px solid gray;
+}
