--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -99,7 +99,8 @@ h1 {
 
 .tabCalCulator_div_currency {
   margin-top: 15px;
-  width: 100%;
-  height: 280px;
+  /* width: 100%; */
+  height: 240px;
   border: 1px solid gray;
+  padding: 20px;
 }
